--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>Directives</title>
 </head>
-<body>
+<body ng-controller="appCtrl">
+
+	<ng-view></ng-view>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/appCtrl.js"></script>
+  <script src="app/directives/directive.js"></script>
 </body>
 </html>
