--- a/app/directives/directiveTmpl.html
+++ b/app/directives/directiveTmpl.html
@@ -1,3 +1,5 @@
 <div>
-	<h1>User</h1>
+	<h1>{{user.name}}</h1>
+	<h4 ng-show="showToggle">email: {{user.email}}</h4>
+	<h4 ng-show="showToggle">age: {{user.age}}</h4>
 </div>
