fFinished step 3 on readme.md

--- a/app/directives/directiveTmpl.html
+++ b/app/directives/directiveTmpl.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-repeat="user in users">
 	<h1>{{user.name}}</h1>
 	<h4 ng-show="showToggle">email: {{user.email}}</h4>
 	<h4 ng-show="showToggle">age: {{user.age}}</h4>
