--- a/app/appTmpl.html
+++ b/app/appTmpl.html
@@ -1,1 +1,1 @@
-<dir-display test="myTest" my-check="checkItOut"></dir-display>
+<dir-display ng-repeat="user in users" test="myTest" my-check="checkItOut"></dir-display>
