--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <script src="app/app.js"></script>
   <script src="app/appCtrl.js"></script>
   <script src="app/directives/directive.js"></script>
+  <script src="app/directives/dirWeather.js"></script>
 </body>
 </html>
