--- a/app/appTmpl.html
+++ b/app/appTmpl.html
@@ -1,1 +1,3 @@
+<dir-weather current-user="tester"></dir-weather>
+
 <dir-display ng-repeat="user in users" test="myTest" my-check="checkItOut"></dir-display>
