--- a/app/directives/dirWeather.html
+++ b/app/directives/dirWeather.html
@@ -1,4 +1,8 @@
 <!-- <h3>Weather</h3> -->
 <div>
-	<h1>{{currentUser}}<h1>
+	<h3>{{currentUser.name}}'s Weather<h3>
+
+	<h4>Temperature: {{temp}} degrees</h4>
+	<h4>Conditions: {{weather}}</h4>
+	<ln/>
 </div>
