--- a/app/appTmpl.html
+++ b/app/appTmpl.html
@@ -1,3 +1,3 @@
-<dir-weather current-user="tester"></dir-weather>
+<dir-weather current-user="currentUser" weather-call="getWeather(data)"></dir-weather>
 
-<dir-display ng-repeat="user in users" test="myTest" my-check="checkItOut"></dir-display>
+<dir-display set-user="setUser(user)" user="user" ng-repeat="user in users" test="myTest" my-check="checkItOut"></dir-display>
