--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Directives</title>
 </head>
-<body ng-controller="appCtrl">
+<body>
 
 	<ng-view></ng-view>
 
@@ -14,5 +14,6 @@
   <script src="app/appCtrl.js"></script>
   <script src="app/directives/directive.js"></script>
   <script src="app/directives/dirWeather.js"></script>
+  <script src="app/weatherService.js"></script>
 </body>
 </html>
