Finished part one of Step 7.

--- a/app/directives/dirWeather.html
+++ b/app/directives/dirWeather.html
@@ -2,7 +2,12 @@
 <div>
 	<h3>{{currentUser.name}}'s Weather<h3>
 
-	<h4>Temperature: {{temp}} degrees</h4>
-	<h4>Conditions: {{weather}}</h4>
+
+	<img ng-show="gifShow" src="img/vomit_load.gif" />
+	
+	<div ng-show="dataShow">
+		<h4>Temperature: {{temp}} degrees</h4>
+		<h4>Conditions: {{weather}}</h4>
+	</div>
 	<ln/>
 </div>
