minor format changes

--- a/app/directives/dirWeather.html
+++ b/app/directives/dirWeather.html
@@ -1,13 +1,13 @@
 <!-- <h3>Weather</h3> -->
 <div>
-	<h3>{{currentUser.name}}'s Weather<h3>
+	<h1>{{currentUser.name}}'s Weather</h1>
 
 
 	<img ng-show="gifShow" src="img/vomit_load.gif" />
 	
 	<div ng-show="dataShow">
-		<h4>Temperature: {{temp}} degrees</h4>
-		<h4>Conditions: {{weather}}</h4>
+		<h2>Temperature: {{temp}} degrees</h2>
+		<h2>Conditions: {{weather}}</h2>
 	</div>
 	<ln/>
 </div>
